# SimulationOfLife

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  SimLife.cc
.github/workflows/: check_build.yml  check_build_macos.yml  create_release.yml
CI/: run_build.sh  setupEnv.sh  setupEnv_Mac.sh  test_build.sh
WorldObjects/: CMakeLists.txt
WorldObjects/include/: FoodItem.hh  Organism.hh
WorldObjects/src/: FoodItem.cc  Organism.cc
include/: Constants.hh  GUI.hh  Organism.hh  ResourceManager.hh  SimManager.hh  SpriteRenderer.hh  WObject.hh  World.hh
scripts/: env.sh
shaders/: sprite.fs  sprite.vs
src/: GUI.cc  ResourceManager.cc  SimManager.cc  SpriteRenderer.cc  WObject.cc  World.cc
